--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -1,18 +1,38 @@
 .layout {
     background-color: rgba(30, 30, 30, 1);
     display: flex;
-    padding-top: 24px;
     flex-direction: column;
-    overflow: scroll;
+    overflow-y: scroll;
     width: 100%;
-    height: 100vh; /* Ensures the layout fills the viewport height */
+    height: 100vh;
     margin: 0;
+    scroll-snap-type: y mandatory;
     }
   
   .container {
-    align-self: center;
     display: flex;
-    width: 1008px;
-    max-width: 100%vh;
     flex-direction: column;
+  }
+
+  /* Media query for tablets */
+  @media (max-width: 768px) {
+    .container {
+      padding: 0 10px;
+    }
+  }
+
+  /* Media query for mobile phones */
+  @media (max-width: 480px) {
+    .container {
+      padding: 0 5px;
+    }
+  }
+
+  .section {
+    height: 100vh;
+    scroll-snap-align: start;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
   }
