--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html, body, #root {
     padding: 0;
     width: 100%vh;
     height: 100%vh;
-    background-color: rgba(30, 30, 30, 1); /* Match the background color */
+    /* background-color: rgba(30, 30, 30, 1);  */
     /* box-sizing: border-box; */
   }
   
