--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -2,7 +2,7 @@
     background-color: rgba(30, 30, 30, 1);
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: hidden;
     width: 100%;
     height: 100vh;
     margin: 0;
