--- a/src/Contact/Contact.module.css
+++ b/src/Contact/Contact.module.css
@@ -102,3 +102,10 @@
     margin-bottom: 2rem;
   }
 }
+
+.copyright {
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 0.9rem;
+  color: #666;
+}
